--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -93,12 +93,12 @@
           </a>
         </li>
 
-                <li class="nav-item  @(Context.Request.Path == "/Notifications" ? "active" : "") ">
-                    <a asp-area="" asp-page="/Notifications" class="nav-link sidebar-link">
+                <li class="nav-item  @(Context.Request.Path == "/Requests" ? "active" : "") ">
+                    <a asp-area="" asp-page="/Requests" class="nav-link sidebar-link">
                         <span class="sidebar-icon">
                             <img class="icon icon-xs mx-1" src="images/eye-grey.png" />
                         </span>
-                        <span class="sidebar-text">@Model.lblNotifications</span>
+                        <span class="sidebar-text">@Model.lblRequests</span>
                     </a>
                 </li>
 
@@ -118,7 +118,8 @@
         
         @if (Model.CanManageStore)
         {
-                    <li class="nav-item @(Context.Request.Path == "/Requests"|| Context.Request.Query["handler"] == "Create") )">
+        <!--
+          <li class="nav-item @(Context.Request.Path == "/Requests"|| Context.Request.Query["handler"] == "Create") )">
                         <a asp-area="" asp-page="/Requests" class="nav-link sidebar-link">
               <span class="sidebar-icon">
                 <img class="icon icon-xs mx-3" src="images/retailer.png" />
@@ -126,6 +127,7 @@
               <span class="sidebar-text break-word">@Model.lblRequests</span>
             </a>
           </li>
+                      -->
         }
 
         @if (Model.CanManageItems)
