--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -15,74 +15,67 @@
 
 
                     <div class="col-lg-12 col-sm-12">
-                        <div class="form-group">
-                            <label>Fiscal Year</label>
-                            <input asp-for="Report.FiscalYear" class="form-control" />
+                        <div class="form-group mb-4">
+                            <label>Serial Number: <b>0001</b></label>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mb-4">
+                            <label>Fiscal Year</label>
+                            <select class="form-select" id="FiscalYear" name="FiscalYear" required>
+                                <option value="2024">2024</option>
+                                <option value="2025">2025</option>
+                            </select>
+                        </div>
+                        <div class="form-group mb-4">
+                            <label>Receiving Date</label>
+                            <input asp-for="Report.ReceivingDate" type="date" class="form-control" required />
+                        </div>
+
+                        <div class="form-group mb-4">
                             <label>Recipient Sector</label>
                             <input asp-for="Report.RecipientSector" class="form-control" required />
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label>Sector Number</label>
                             <input asp-for="Report.SectorNumber" class="form-control" required />
                         </div>
-                        <div class="form-group">
-                            <label>Attachment</label>
-                            <input type="file" name="AttachmentFile" class="form-control" required />
-                        </div>
-                        <div class="form-group">
-                            <label>Recipient Employee ID</label>
-                            <input asp-for="Report.RecipientEmployeeId" class="form-control" required />
-                        </div>
-                        <div class="form-group">
-                            <label>Technical Member</label>
-                            <input asp-for="Report.TechnicalMember" class="form-control" required />
-                        </div>
-                        <div class="form-group">
-                            <label>Chief Responsible</label>
-                            <input asp-for="Report.ChiefResponsible" class="form-control" required />
-                        </div>
-                        <input asp-for="Report.CreatedBy" type="hidden" value="@Model.Report.CreatedBy" />
 
-
-                        <div class="form-group">
-                            <label>Receiving Date</label>
-                            <input asp-for="Report.ReceivingDate" type="date" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label>Receiving Warehouse</label>
-                            <input asp-for="Report.ReceivingWarehouse" class="form-control" />
+                            <select class="form-select" id="ReceivingWarehouse" name="ReceivingWarehouse" required>
+                                <option value="majesticwarehouse">Majestic Warehouse</option>
+                                <option value="testwarehouse">Test Warehouse</option>
+                            </select>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label>Based On Document</label>
-                            <input asp-for="Report.BasedOnDocument" class="form-control" />
+                            <input asp-for="Report.BasedOnDocument" class="form-control" required />
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label>Document Number</label>
-                            <input asp-for="Report.DocumentNumber" class="form-control" />
+                            <input asp-for="Report.DocumentNumber" class="form-control" required />
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label>Document Date</label>
-                            <input asp-for="Report.DocumentDate" type="date" class="form-control" />
+                            <input asp-for="Report.DocumentDate" type="date" class="form-control" required />
                         </div>
 
-                        @*  <div class="form-group">
-                        <label>Supplier Type</label>
-                        <select asp-for="Report.SupplierId" class="form-control" required>
-                        <option value="">Select Supplier Type</option>
-                        @foreach (var supplier in Model.Suppliers.DistinctBy(s => s.SupplierType)) // Avoid duplicates
-                        {
-                        <option value="@supplier.SupplierType">@supplier.SupplierType</option>
-                        }
-                        </select>
-                        </div> *@
+                        <div class="form-group mb-4">
+                            <label>Add Attachment</label>
+                            <input type="file" name="AttachmentFile" class="form-control" />
+                        </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-4">
+                            <label>Supplier Type</label>
+                            <select class="form-select" id="SupplierType" name="SupplierType" required>
+                                <option value="Internal">Internal</option>
+                                <option value="External">External</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group mb-4">
                             <label>Supplier Name</label>
                             <select asp-for="Report.SupplierId" class="form-control" required>
                                 <option value="">Select Supplier Name</option>
@@ -93,34 +86,96 @@
                             </select>
                         </div>
 
-                        <div class="form-group">
-                            <label>Remarks</label>
+                        <div class="form-group mb-4">
+                            <label>Item Group</label>
+                            <select class="form-select" id="ItemGroup" name="ItemGroup" required>
+                                <option value="Chemicals">Chemicals</option>
+                                <option value="Glass">Glass</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group mb-4">
+                            <label>Item Name</label>
+                            <select class="form-control" name="ItemsForReport[0].ItemId" required>
+                                <option value="">Select Item</option>
+                                @foreach (var item in Model.Items)
+                                {
+                                    <option value="@item.ItemId">@item.ItemName</option>
+                                }
+                            </select>
+                        </div>
+
+                        <div class="form-group mb-4">
+                            <label>Item Description</label>
                             <textarea asp-for="Report.Comments" class="form-control"></textarea>
                         </div>
 
-                        <h4>Items</h4>
-                        <div id="items-container">
-                            <div class="item-group border p-3 mb-3">
-                                <div class="form-group">
-                                    <label>Item</label>
-                                    <select class="form-control" name="ItemsForReport[0].ItemId" required>
-                                        <option value="">Select Item</option>
-                                        @foreach (var item in Model.Items)
-                                        {
-                                            <option value="@item.ItemId">@item.ItemName</option>
-                                        }
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>Quantity</label>
-                                    <input type="number" name="ItemsForReport[0].Quantity" class="form-control" required />
-                                </div>
-                                <div class="form-group">
-                                    <label>Unit Price</label>
-                                    <input type="number" step="0.01" name="ItemsForReport[0].UnitPrice" class="form-control" required />
-                                </div>
-                            </div>
+                        <div class="form-group mb-4">
+                            <label>Unit of Measure</label>
+                            <input type="number" name="UnitofMeasure" class="form-control" />
                         </div>
+
+                        <div class="form-group mb-4">
+                            <label>Quantity</label>
+                            <input type="number" name="ItemsForReport[0].Quantity" class="form-control" required />
+                        </div>
+                        <div class="form-group mb-4">
+                            <label>Unit Price</label>
+                            <input type="number" step="0.01" name="ItemsForReport[0].UnitPrice" class="form-control" required />
+                        </div>
+
+                        <div class="form-group mb-4">
+                            <label>Total Price</label>
+                            <input type="number" step="0.01" name="TotalPrice" class="form-control" />
+                        </div>
+
+                        <div class="form-group mb-4">
+                            <label>Comments</label>
+                            <textarea asp-for="Report.Comments" class="form-control"></textarea>
+                        </div>
+
+
+                        <div class="form-group mb-4">
+                            <label>Recipient Employee ID</label>
+                            <input asp-for="Report.RecipientEmployeeId" class="form-control" required />
+                        </div>
+                        <div class="form-group mb-4">
+                            <label>Recipient Employee Name</label>
+                            <input asp-for="Report.RecipientEmployeeId" class="form-control" required />
+                        </div>
+
+
+                        <div class="form-group mb-4">
+                            <label>Technical Member</label>
+                            <select class="form-select" id="TechnicalMember" name="TechnicalMember" required>
+                                <option value="FirstTechnical">First Technical Member</option>
+                                <option value="SecondTechnical">Second Technical Member</option>
+                            </select>
+                        </div>
+                        <div class="form-group mb-4">
+                            <label>Chief Responsible (General Supervisor)</label>
+                            <select class="form-select" id="ChiefResponsible" name="ChiefResponsible" required>
+                                <option value="FirstChief">First Chief Responsible</option>
+                                <option value="SecondChief">Second Chief Responsible</option>
+                            </select>
+                        </div>
+                        <input asp-for="Report.CreatedBy" type="hidden" value="@Model.Report.CreatedBy" />
+
+
+                        
+
+                        @*  <div class="form-group mb-4">
+                        <label>Supplier Type</label>
+                        <select asp-for="Report.SupplierId" class="form-control" required>
+                        <option value="">Select Supplier Type</option>
+                        @foreach (var supplier in Model.Suppliers.DistinctBy(s => s.SupplierType)) // Avoid duplicates
+                        {
+                        <option value="@supplier.SupplierType">@supplier.SupplierType</option>
+                        }
+                        </select>
+                        </div> *@
+
+                        
 
 
                         @* <button type="button" class="btn btn-secondary" id="add-item-btn">Add Another Item</button> *@
