--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -113,8 +113,8 @@
         </div>
     </div>
     @* <div style="text-align:center; color:maroon">@Model.Message</div>  *@
-<button id="exportExcel" class="btn btn-success">Export Excel</button>
-<button id="printBtn" class="btn btn-primary">Print Table</button>
+    <button id="exportExcel" class="btn btn-success mb-3">Export Excel</button>
+    <button id="printBtn" class="btn btn-primary mb-3">Print Table</button>
 
     <div class="table-settings mb-4">
         <form method="post" asp-page-handler="Action" class="row align-items-center">
